package br.com.saqz.groups.presentation.navigation

enum class GroupsDestination {
    SETUP,
    SELECTOR,
    LOADING,
    LOAD_ERROR,
    HOME,
    PROFILE_COMPLETION,
    PEOPLE,
    GAMES,
    GAME_DETAIL,
    FINANCE,
    OWN_CHARGES,
    NOTICES,
    MORE,
}
